--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
         </div>
   
 
-    <div class="result">
-        <div class="res__detail">Search Albums by ArtistName:</div>
+        <div class="result">
+            <div class="res__detail">
+                <p>Search Albums by ArtistName:</p>
+                <div class="res__loader" id="loader"></div>
+            </div>
         <section id="res__display"></section>
-    </div>
-    </div>  
+        </div>
+    </div> 
 <script src="index.js"></script> 
 </body>
 </html>
